karcioszki-ui/src/app/karcioszki.style.scss
@import 'karcioszki.variables';

//////////// FLEX SECTION /////////////

.flex-container {
  display: flex;
}
.flex-wrap {
  flex-wrap: wrap;
}
.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.flex-center-vertical {
  display: flex;
  justify-content: center;
}
.flex-dir-column {
  flex-direction: column;
}
.flex-grow-1 {
  flex-grow: 1;
}
.flex-grow-2 {
  flex-grow: 2;
}

//ai (align-items)
.flex-ai-center {
  align-items: center;
}
.flex-ai-end {
  align-items: flex-end;
}

//jc (justify-content)
.flex-jc-space-between {
  justify-content: space-between;
}
.flex-jc-space-around {
  justify-content: space-around;
}
.flex-jc-space-evenly {
  justify-content: space-evenly;
}

.flex-wrap-center {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
//// GLOBAL STYLES /////

.max-width {
  width: 100%;
}
.half-width {
  width: 50%;
}

.height-100{
  height: 100%;
}

.height-80{
  height: 80%;
}

.position-relative {
  position: relative;
}


.space{
  margin: 3em;
}
.space-vertical-top {
  margin-top: 3em;
}
.space-vertical-top-small {
  margin-top: 1em;
}
.space-horizontal-right-small {
  margin-right: 1em;
}
.space-vertical-bottom {
  margin-bottom: 3em;
}
.container {
  padding: 0 30%;
}
.container-wider {
  padding: 0 20%;
}

//////////// GENERAL TAG SECTION /////////////

h1 {
    text-align: center;
}

/// COMPONENT SPECIFIC ///

mat-form-field {
  width: 100%
}

.dialog-header {
  display: flex;
  justify-content: center;
  position: relative;
}    


.cards-counter {
  position: absolute;
  right: 0.1em;
  top: 0.1em;
  height: 2em;
  width: 2em;
  text-align: center;
  line-height: 2em;
  font-size: 1.3em;
  background-color: rgba($color: #ffffff, $alpha: 0.80);
  border-radius: 50%;
  color: #3f51b5;
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
}

.dialog-header-button {
  position: absolute;
  right: -1em;
  top: -1em;
}

.dialog-header-buttons {
  position: absolute;
  left: -0.5em;
  top: -0.5em;
}

.toolbar-nav-left {
  position: absolute;
  left: 25px;
  top: 13px;
}

.package-thumbnail {
  width: 150px;
  height: 150px;
  object-fit: cover;
}

.card-preview {
  display: inline-block;
  margin: 5px;
  padding: 4px;
  border: solid 1px;
  border-radius: 5px;
}

.mat-dialog-actions {
  justify-content: flex-end
}

.mat-form-field {
  width: 100%
}

.small-mat-icon {
  font-size: 14px;
  width: 24px;
  height: 24px;
  line-height: 20px;
}

/// GAME LOBBY ///
.background-red {
  background-color: $red;
}
.background-blue{
  background-color: $blue;
}
.color-leader {
  color: #e4da12
}
.player-list {
  width: 90vw;
}
.mini-button {
  background-color: $default;
}
.player-list-item-header {
  font-weight: 500;
  background-color: $gray;
  border-radius: 0.5em 0.5em 0 0;
}
.player-list-item {
  span.player-name {
    flex-basis: 60%;
    text-align: left;
  }
}
.team-container {
  flex-basis: 20%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.leader-container {
  flex-basis: 20%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.team-box {
  width: 25px;
  height: 25px;
  margin: 5px;
  border-radius: 5px;
  box-shadow: 1.9px 2px 2px 0px rgba(0, 0, 0, 0.3);
}

/// OLD CODE ///

.card-package mat-card{
  font-weight: 500;
  cursor: pointer;
}

.card-package{
  width: 10%;
  max-width: 300px;
  text-align: center;
}
::ng-deep #lobby .card-package-selected {
  border: 5px solid #3f51b5;
    border-radius: 5px;
    transform: scale(1.1);
}
  
  @mixin combine-inside-border-collor($color){
    //color of cards - with border
    background-color: $color;
    box-shadow:
    0 0 0 2px darken($color, 10%),
    0 0 0 4px $color;
    color: lighten($color, 25%);
  }
  
  .card {
    margin: 7px;
  }
  
  #cards{
    max-width: 1300px;
    padding: 2rem;
    margin: auto;
    button{
      //default color card
      @include combine-inside-border-collor($default);
      color: black;
      text-transform: uppercase;
      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
      font-weight: 900;
      text-align: center;
      display: flex;
      justify-content: center;
      flex-basis: 16%;
      border-radius: 5px;
      padding: 0.7rem 1.5rem;
      width: fit-content;
      font-size: 1.2rem;
    }
    .none, .orange{
      @include combine-inside-border-collor($none);
    }
    .blue{
      @include combine-inside-border-collor($blue);
    }
    .red{
      @include combine-inside-border-collor($red);
    }
    .black{
      @include combine-inside-border-collor($black);
    }
    .selected-card, button[disabled="true"]{
      filter: brightness(0.3);
      opacity: 0.8;
      color: black;
    }  
  }

  #quantityOfCards button {
    margin: 5px;
  }
    
  #activePlayerColor{
    height: 36px;
    width: 36px;
    float: left;
    margin: 5px;
    margin-left: 0;
    border-radius: 4px;
  }

  #endGame{
    margin-left: 15px;
  }
  
  .margin-xs{
    margin: 10px;
  }
  .margin-s{
    margin: 25px;
  }
.margin-right-s{
  margin-right: 25px;
}

.margin-bottom-m{
  margin-bottom: 40px;
}
.margin-bottom-s{
  margin-bottom: 25px;
}
.margin-left-s{
  margin-left: 25px;
}
.margin-top-s{
  margin-top: 25px;
}

.big-font{
  font-size: 1.5em;
}

 mat-toolbar.background-red, mat-toolbar.background-blue{
   color: white;
 }

 //TODO - wywalić style i dać -1em, a na komorce -1.8em

// .vertical-space-top{
//   margin-top: 3em;
// }
// .vertical-space-bottom{
//   margin-bottom: 3em;
// }
// mat-toolbar .empty{
//   width: 100px;
// }
// .inline-block{
//   display: inline-block;
// }

// ::ng-deep .relative{
//   position: relative!important;
// }

// .absolute{
//   position: absolute;
//   top: 0.5em;
// }

// .normal-weight{
//   font-weight: 400;
// }

// .sof-bold{
//   font-weight: 500;
// }

// mat-toolbar .right{
//   right: 0;
// }
// mat-toolbar .left{
//   left: 0;
// }

// .mat-card:not([class*=mat-elevation-z]), .mat-raised-button:not([class*=mat-elevation-z]){
//   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 2px rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
// }

